remove css files and modify .gitignore since we're doing css preprocessing to sass

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -19,3 +19,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# since we're preprocessing to sass using build-css and watch-css
+src/**/*.css
